assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Reenie+Beanie&display=swap');

/* --------------------------------------------------------------------------Body structure */

html, body {
    max-width: 100%;
    overflow-x: hidden;
}

/* --------------------------------------------------------------------------Body font styles */

body {
    font-family: 'Montserrat', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Reenie Beanie', cursive;
}

/* --------------------------------------------------------------------------Body color styles */

body {
    background-color: #7cc4a4;
}

h1, h2, h3, h4, h5, h6, p {
    color: #f2feff;
}

/* --------------------------------------------------------------------------Welcome section */

.welcome {
    
    /*--Code taken from Conor Bailey's instructional Youtube video on how to place welcome text in front of the website--*/

    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: #7cc4a4;
    z-index: 200;
    text-align: center;

    /*--/Code taken from Conor Bailey's instructional Youtube video on how to place welcome text in front of the website--*/
}

#feeling {
    font-size: 100px;
    line-height: 90vh;
}

.welcome.displayNone {
    
    /*--Code taken from Conor Bailey's instructional Youtube video on how to place welcome text in front of the website--*/

    position: fixed;
    opacity: 0;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: #7cc4a4;
    z-index: -10;
    text-align: center;
    transition: all 1s;

    /*--/Code taken from Conor Bailey's instructional Youtube video on how to place welcome text in front of the website--*/
}

/* --------------------------------------------------------------------------Header section */

.navbar-brand h1 {
    font-size: 60px;
    margin: 10px 30px;
}

.navbar-brand h1:hover, 
.nav-link h2:hover {
    color: #299cab;
}

.nav-link h2 {
    margin-top: 15px;
    padding: 0 10px;
}

.active {
    text-decoration: underline;
    color: #f2feff;
}

.active:hover {
    color: #f2feff;
}

/* --------------------------------------------------------------------------Footer section */

.footer {
    /* Got help from freeCodeCamp on how to keep the footer at the bottom of the page */
    bottom: 0;
    width: 100%;
    height: 6rem;
    background: #299cab;
    margin-top: 50px;
    padding-top: 10px;
    /* /Got help from freeCodeCamp on how to keep the footer at the bottom of the page */
}

.disclaimer {
    text-align: right;
}

.disclaimer a {
    color: #f2feff;
}

/* --------------------------------------------------------------------------Main section for all HTMLs */

.main {
    text-align: center;
    position: relative;
    min-height: 100%;
}

.main-header h3 {
    font-size: 45px;
}

/* --------------------------------------------------------------------------Volume slider section */

/* All the code relating to input type range is taken from CSS Portal, with color adjustments */
input[type=range] {
    height: 25px;
    -webkit-appearance: none;
    margin: 10px 0;
    width: 70%;
    background-color: transparent;
  }
  input[type=range]:focus {
    outline: none;
  }
  input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animate: 0.2s;
    box-shadow: 0px 0px 0px #000000;
    background: #299cab;
    border-radius: 1px;
    border: 0px solid #000000;
  }
  input[type=range]::-webkit-slider-thumb {
    box-shadow: 0px 0px 0px #000000;
    border: 1px solid #299cab;
    height: 18px;
    width: 18px;
    border-radius: 25px;
    background: #7cc4a4;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -7px;
  }
  input[type=range]:focus::-webkit-slider-runnable-track {
    background: #299cab;
  }
  input[type=range]::-moz-range-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animate: 0.2s;
    box-shadow: 0px 0px 0px #000000;
    background: #299cab;
    border-radius: 1px;
    border: 0px solid #000000;
  }
  input[type=range]::-moz-range-thumb {
    box-shadow: 0px 0px 0px #000000;
    border: 1px solid #299cab;
    height: 18px;
    width: 18px;
    border-radius: 25px;
    background: #299cab;
    cursor: pointer;
  }
  input[type=range]::-ms-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animate: 0.2s;
    background: transparent;
    border-color: transparent;
    color: transparent;
  }
  input[type=range]::-ms-fill-lower {
    background: #299cab;
    border: 0px solid #000000;
    border-radius: 2px;
    box-shadow: 0px 0px 0px #000000;
  }
  input[type=range]::-ms-fill-upper {
    background: #299cab;
    border: 0px solid #000000;
    border-radius: 2px;
    box-shadow: 0px 0px 0px #000000;
  }
  input[type=range]::-ms-thumb {
    margin-top: 1px;
    box-shadow: 0px 0px 0px #000000;
    border: 1px solid #299cab;
    height: 18px;
    width: 18px;
    border-radius: 25px;
    background: #299cab;
    cursor: pointer;
  }
  input[type=range]:focus::-ms-fill-lower {
    background: #299cab;
  }
  input[type=range]:focus::-ms-fill-upper {
    background: #299cab;
  }

/* --------------------------------------------------------------------------Main Sounds section */

.main-sounds {
    color: #f2feff;
    margin-top: 30px;
    width: 50%;
}

.main-icon, .fa-pause {
    border: 2px solid #f2feff;
    /* Got help from W3Schools' CSS Borders on how to create soft and round edged borders */
    border-radius: 16px;
    /* /Got help from W3Schools' CSS Borders on how to create soft and round edged borders */
    margin: 5px;
    font-size: 80px;
}

.fa-pause {
    padding: 10px 20px;
}

.nature .fa-tree {
    padding: 10px 20px;
}

.travel .fa-subway {
    padding: 10px 15px;
}

.public .fa-utensils {
    padding: 10px 18px;
}

.home .fa-home {
    padding: 10px 5px;
}

.weather .fa-cloud-sun-rain {
    padding: 10px 5px;
}

.nature .fa-tree:hover, 
.travel .fa-subway:hover, 
.public .fa-utensils:hover, 
.home .fa-home:hover,
.weather .fa-cloud-sun-rain:hover {
    color: #299cab;
    border-color: #299cab;
}

.fa-plus,
.fa-minus {
    font-size: 20px;
}

.fa-step-backward ,
.fa-step-forward  {
    font-size: 30px;
}

/* --------------------------------------------------------------------------Main Buttons section */

.main-reset .btn {
    width: 60%;
}

.main-background .btn, 
.main-reset .btn {
    background-color: #7cc4a4;
    color: #f2feff;
    border: 1px solid #f2feff;
    margin-top: 20px;
}

.main-background .btn:hover {
    background-color: #299cab;
}

.main-reset .btn:hover {
    background-color: #fc7844;
}

/* --------------------------------------------------------------------------Background videos section */

.background-videos { /*Code taken from W3Schools, 100% width and height to cover the entire window*/
    position: fixed;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    z-index: -5;
}

/* --------------------------------------------------------------------------How To Use section */

.main-howto {
    margin-top: 40px;
    width: 55%;
}

.col-1, .col-2 {
    padding: 15px 0;
}

.col-1 {
    color: #f2feff;
    text-align: left;
    width: 70%;
}

.col-2 {
    color: #f2feff;
    width: 70%;
}

.col-2 .fa-tree, 
.col-2 .fa-home {
    border: 2px solid #f2feff;
    /* Got help from W3Schools' CSS Borders on how to create soft and round edged borders */
    border-radius: 16px;
    /* /Got help from W3Schools' CSS Borders on how to create soft and round edged borders */
    margin: 5px;
    font-size: 40px;
}

.col-2 .fa-tree {
    padding: 10px 17px;
}

.col-2 .fa-home {
    padding: 10px;
}

.col-2 .fa-plus, 
.col-2 .fa-minus, 
.col-2 .fa-step-backward, 
.col-2 .fa-step-forward {
    font-size: 30px;
    margin: 0 30px;
}

.col-2 .fa-headphones-alt {
    font-size: 40px;
}

.demo-bg-btn, 
.demo-reset-btn {
    background-color: #7cc4a4;
    color: #f2feff;
    border: 1px solid #f2feff;
}

.demo-bg-btn:hover {
    background-color: #299cab;
    color: #f2feff;
}

.demo-reset-btn:hover {
    background-color: #fc7844;
    color: #f2feff;
}

.fa-heart {
    color: red;
    padding-left: 35px;
}

/* --------------------------------------------------------------------------About section */

.main-about {
    text-align: left;
    color: #f2feff;
    margin-top: 35px;
    width: 35%;
}

.about-link {
    text-decoration: none;
    color: #0388fc;
}

/* --------------------------------------------------------------------------Contact section */

#name, #email, #message, #uploadfile {
    background-color: #7cc4a4;
    color: #f2feff;
    border: 1px solid #f2feff;
    margin: 15px;
    width: 100%;
}

.contact-btn {
    background-color: #7cc4a4;
    color: #f2feff;
    border: 1px solid #f2feff;
}

.contact-btn:hover {
    background-color: #299cab;
    color: #f2feff;
}

